2016-08-29
Links will be loaded seperate from nodes
    this allows nodes to be retained and links to be changed (with changing timelines)
    This also allows control over how links are loaded. (order of loading, chunking the requests)


2016-08-25
Started adding timestamps.
    Decided not to add timestamps to `Node*` tables. Nodes are independent of time?
        If nothing is connecting to a node, it can just not be displayed.
        Nodes at different times won't need different names.
    ? Should `Nodes*` not store number-of-children precalculated if therewill be a potentially changing number?
    Links will have timestamps, quantized to 5 minute intervals.
        12 time slots per hour
        288 time slots per day
        2016 time slots per week (2016 is not a typo)
        105120 time slots per year
    Chose TIMESTAMP over DATETIME for format:
        stamps will be now-ish, not arbirary like appointments or birthdays
        timestamps are 32-bit (vs 64-bit for datetime) => faster, lighter
        Not quite sure what to do about timezones, but timestamps will do it right on the MySQL side
            (if I do it correctly on the python side)
Considering continuous import problem.
    Keep Syslog table as exclusive of batch import via import scripts
    Add two new buffer tables.  One to receive new imports. One to hold while processing for display.
    Buffers swap every 5 minutes. There needs to be some way to invoke the processing function. Not sure yet.
    Stats page will need to be different, or just not based on `Syslog`